--- a/Website_2022/HTML/Index.html
+++ b/Website_2022/HTML/Index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="../css/index_style.css">
+    <link rel="stylesheet" type="text/css" href="css/index_style.css">
     <meta charset="UTF-8">
     <meta name="description" content="A website portfolio of Ryan White's works and abilities.">
     <title>Ryan White</title>
