--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="../css/index_style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/index_style.css">
     <meta charset="UTF-8">
     <meta name="description" content="A website portfolio of Ryan White's works and abilities.">
     <title>Ryan White</title>
@@ -18,15 +18,15 @@
 
     <h3> Education</h3>
       <h4> University of Richmond</h4>
-        <a href="Major_BA.html"> <h5> Major in Business Administration </h5> </a>
-        <a href="Minor_Math.html"> <h5> Minor in Mathematics </h5> </a>
-        <a href="Conc_Fin.html"> <h5> Concentration in Finance </h5> </a>
-        <a href="Preengineering.html"> <h5> Pre-engingeering </h5> </a>
+        <a href="HTML/Major_BA.html"> <h5> Major in Business Administration </h5> </a>
+        <a href="HTML/Minor_Math.html"> <h5> Minor in Mathematics </h5> </a>
+        <a href="HTML/Conc_Fin.html"> <h5> Concentration in Finance </h5> </a>
+        <a href="HTML/Preengineering.html"> <h5> Pre-engingeering </h5> </a>
     <br/>
       <h4> Columbia University</h4>
-        <a href="Major_OR.html"> <h5> Major in Operations Research </h5> </a>
+        <a href="HTML/Major_OR.html"> <h5> Major in Operations Research </h5> </a>
 
-    <a href="Projects.html"> <h3> Projects</h3> </a>
-    <a href="Miscellaneous.html"> <h3> Miscellaneous</h3> </a>
+    <a href="HTML/Projects.html"> <h3> Projects</h3> </a>
+    <a href="HTML/Miscellaneous.html"> <h3> Miscellaneous</h3> </a>
   </body>
 </html>
